refactor: 페이지네이션 리팩토링 (#107)